Added two button to the slide

--- a/das.css
+++ b/das.css
@@ -50,6 +50,7 @@
     padding-top: 10px;
     height: 38px;
     position: relative;
+    cursor: default;
 }
 .drop{
     display: flex;
@@ -109,13 +110,30 @@
     border-top: solid var(--nav-bar-bg-color) 2px;
     border-bottom: solid var(--nav-bar-bg-color) 2px;
 }
+.slide-btn{
+    height: 30px;
+    width: 30px;
+    margin-top: auto;
+    margin-bottom: auto;
+    outline: none;
+    font-size: 20px;
+    color: var(--main-font-color);
+    background-color: var(--container-bg-color);
+    border: solid var(--main-font-color) 1px;
+    border-radius: 5px;
+}
+#pre{
+    margin-left: 10px;
+    margin-right: auto;
+}
+#next{
+    margin-left: auto;
+    margin-right: 10px;
+}
 .movieImg{
     height: var(--img-width);
     width: auto;
     margin: 0px 10px 0px 10px;
-}
-.movieImg:first-child{
-    
 }
 
 #form{
