--- a/das.css
+++ b/das.css
@@ -3,9 +3,10 @@
     --nav-bar-bg-color: #333333;
     --nav-bar-height: 3rem;
     --nav-bar-font-size: 25px;
-    --img-width: 350px;
+    --img-width: 2.8%;
     --container-bg-color: #2b2a2a;
     --main-font-color: white;
+    --slide-gb-color: #111010b2;
 
     font-size: var(--big-sc-font-size);
 }
@@ -13,6 +14,9 @@
     padding: 0;
     margin: 0;
     height: 100%;
+}
+body{
+    background-color: var(--container-bg-color);
 }
 
 
@@ -63,7 +67,7 @@
     border-top: none;
     padding: 5px;
 }
-.nav-link:hover .drop{
+.nav-link:hover > .drop{
     animation-name: appear;
     animation-duration: 1s;
     animation-fill-mode: forwards;
@@ -90,56 +94,92 @@
 #container{
     top: var(--nav-bar-height);
     width: 100%;
+    height: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: var(--container-bg-color);
+    overflow: hidden;
 }
 
 #slide{
-    width: 100%;
-    height: 350px;
-    margin-top: 20px;
+    width: 500%;
+    height: 400px;
+    position: absolute;
+    top: 25px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     padding-top: 15px;
     padding-bottom: 15px;
-    background-color: #111010b2;
+    background-color: var(--slide-gb-color);
     border-top: solid var(--nav-bar-bg-color) 2px;
     border-bottom: solid var(--nav-bar-bg-color) 2px;
+    overflow: hidden;
+    animation-name: slide;
+    animation-duration: 30s;
+    animation-iteration-count: infinite;
+    animation-direction: normal;
+}
+@keyframes slide {
+    0%, 16%{
+        transform: translateX(34.4%);
+    }
+    21%, 37%{
+        transform: translateX(17.2%);
+    }
+    42%, 58%{
+        transform: translateX(0%);
+    }
+    63%, 79%{
+        transform: translateX(-17.2%);
+    }
+    84%, 100%{
+        transform: translateX(-34.4%);
+    }
+}
+.movieImg{
+    height: auto;
+    width: var(--img-width);
+    margin: 0px 10px 0px 10px;
+    align-self: center;
+}
+
+#swap{
+    width: 100%;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 465px;
 }
 .slide-btn{
     height: 30px;
     width: 30px;
-    margin-top: auto;
-    margin-bottom: auto;
     outline: none;
     font-size: 20px;
     color: var(--main-font-color);
-    background-color: var(--container-bg-color);
-    border: solid var(--main-font-color) 1px;
+    background-color: var(--slide-gb-color);
+    border: solid 1px;
     border-radius: 5px;
+    margin-left: 40px;
+    margin-right: 40px;
 }
-#pre{
-    margin-left: 10px;
-    margin-right: auto;
+.swap-radio{
+    margin-left: 12px;
+    margin-right: 12px;
 }
-#next{
-    margin-left: auto;
-    margin-right: 10px;
-}
-.movieImg{
-    height: var(--img-width);
-    width: auto;
-    margin: 0px 10px 0px 10px;
+.current{
+    
 }
 
+
 #form{
-    margin-top: 35px;
+    margin-top: 490px;
+    margin-bottom: 30px;
     width: 700px;
     height: 300px;
+    top: 400px;
     display: flex;
     flex-direction: column;
     background-color: rgba(29, 28, 28, 0.5);
@@ -176,7 +216,13 @@
         width: 130px;
     }
     :root{
-        --img-width:300px;
+        --img-width: auto;
+    }
+    .movieImg{
+        height: 90%;
+    }
+    #slide{
+        height: 300px;
     }
     #form{
         width: 500px;
